lambda-appsync-proc/tests/fail/missing_arg.stderr
error[E0593]: function is expected to take 1 argument, but it takes 0 arguments
 --> tests/fail/missing_arg.rs:7:10
  |
6 | #[appsync_operation(mutation(createPlayer))]
  | --------------------------------------------
  | |
  | takes 0 arguments
  | required by a bound introduced by this call
7 | async fn create_player() -> Result<Player, AppsyncError> {
  |          ^^^^^^^^^^^^^ expected function that takes 1 argument
  |
note: required by a bound in `create_player::without_event::check_signature`
 --> tests/fail/missing_arg.rs:3:1
  |
3 | appsync_lambda_main!("../../../../schema.graphql");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `check_signature`
  = note: this error originates in the macro `appsync_lambda_main` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/fail/missing_arg.rs:6:1
  |
6 | #[appsync_operation(mutation(createPlayer))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | expected `(String,)`, found `()`
  | this expression has type `(std::string::String,)`
  |
  = note:  expected tuple `(std::string::String,)`
          found unit type `()`
  = note: this error originates in the attribute macro `appsync_operation` (in Nightly builds, run with -Z macro-backtrace for more info)
